--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -93,13 +93,116 @@ body {
   }
 }
 
-header{
+header {
+  position: absolute;
+  width: 100%;
+  top: 0;
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
+  grid-template-columns: 81px 1fr 1fr auto;
+  text-transform: uppercase;
+  z-index: 1;
+
+  .logo{
+    font: 34px/0.9 $bold;
+    color: #112200;
+    margin: 18px 0 auto 0;
+    grid-column-start: 2;
+  }
+
+  input[type="checkbox"] {
+    display: none;
+    width: 81px;
+    height: 81px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 11;
+    -webkit-touch-callout: none;
+    &:checked ~ #trigger {
+      background-size: 0 0;
+
+      &:before {
+        transform: translateY(275%) rotate(45deg);
+      }
+    }
+
+    &:checked ~ ul {
+      transform: none;
+    }
+  }
 }
 
-section{
+.menu{
+  display: flex;
+  flex-direction: column;
+  margin: 18px 0 auto 5%;
+  a{
+    color: #112200;
+    font:18px $medium;
+    margin-bottom: 30px;
+  }
+}
+
+#trigger {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 81px;
+  height: 81px;
+  border: none;
+  background: #E7411F;
+  background-size: 100% 3px;
+  transition: background-size 0.3s ease-in-out;
+  cursor: pointer;
+  outline: none;
+  z-index: 10;
+  margin: 0 0 0 auto;
+
+  &:before{
+    content: attr(title);
+    font: 16px "CoFoSans-Bold";
+    color: white;
+    text-transform: uppercase;
+    display: block;
+    transition: transform 0.3s ease-in-out;
+  }
+
+  &.active {
+    background-size: 0 0;
+
+    &:before {
+      transform: translateY(275%) rotate(45deg);
+    }
+  }
+}
+
+section {
   height: 100vh;
+  grid-column: 1/7;
+  overflow: hidden;
+  picture{
+    height: 100vh;
+    overflow: hidden;
+    position: fixed;
+    &:before{
+      content: attr(title);
+      position: absolute;
+      bottom: 116px;
+      color: #112200;
+      font:169px/0.81 $medium;
+      z-index: 1;
+      max-width: 924px;
+      margin: 0 auto;
+      left: 15%;
+      right: 0;
+    }
+  }
+  img{
+    width: 100%;
+  }
 }
 
 a {
@@ -115,9 +218,9 @@ a:focus {
   outline: none;
 }
 
-.menu {
+.items {
   width: 100%;
-  padding: 0 74px;
+  padding: 113px 74px;
   margin: auto;
   position: relative;
   user-select: none;
@@ -127,7 +230,7 @@ a:focus {
   grid-gap: 63px;
 }
 
-.menu__item {
+.item {
   position: relative;
   &:hover::before {
     opacity: 1;
@@ -150,28 +253,30 @@ a:focus {
     transform: translateX(-1rem);
     transition: transform 0.3s, opacity 0.3s;
   }
-  &:nth-child(1){
+  &:nth-child(1) {
     grid-column: 1/3;
+    margin-top: 160px;
   }
-  &:nth-child(2){
+  &:nth-child(2) {
     grid-column: 3/5;
+    margin-top: 427px;
   }
-  &:nth-child(3){
+  &:nth-child(3) {
     grid-column: 5/7;
   }
-  &:nth-child(4){
+  &:nth-child(4) {
     grid-column: 1/5;
     text-align: center;
   }
-  &:nth-child(5){
+  &:nth-child(5) {
     grid-column: 5/7;
   }
-  img{
+  img {
     max-width: 100%;
   }
 }
 
-.menu__item-text {
+.item-text {
   position: relative;
   cursor: pointer;
   padding: 0.5rem;
@@ -180,7 +285,7 @@ a:focus {
   font-size: 26px;
 }
 
-.menu__item-textinner {
+.item-textinner {
   display: block;
   font: 16px/1.2 $bold;
   text-transform: uppercase;
@@ -188,19 +293,19 @@ a:focus {
   color: var(--color-menu);
 }
 
-p{
+p {
   font-size: 34px;
 }
 
-.js .menu__item-textinner {
+.js .item-textinner {
   transform: translateY(100%);
 }
 
-.menu__item:hover .menu__item-textinner {
+.item:hover .item-textinner {
   color: var(--color-menu-hover);
 }
 
-.menu__item-sub {
+.item-sub {
   display: none;
   text-transform: uppercase;
   font-weight: bold;
@@ -214,12 +319,12 @@ p{
   transition: transform 0.3s, opacity 0.3s;
 }
 
-.menu__item:hover .menu__item-sub {
+.item:hover .item-sub {
   opacity: 1;
   transform: translateX(0);
 }
 
-.menu__item-sub::before {
+.item-sub::before {
   content: "";
   position: absolute;
   left: 0;
@@ -232,15 +337,17 @@ p{
   transition: transform 0.3s;
 }
 
-.menu__item:hover .menu__item-sub::before {
+.item:hover .item-sub::before {
   transform: rotate(22.5deg) scale3d(1, 1, 1);
 }
 
 .hover-reveal {
   position: absolute;
-  z-index: -1;
-  width: 220px;
-  height: 320px;
+  z-index: 0;
+  width: 230px;
+  height: 230px;
+  border-radius: 50%;
+  overflow: hidden;
   top: 0;
   left: 0;
   pointer-events: none;
@@ -277,14 +384,14 @@ p{
 }
 
 @media screen and (min-width: 53em) {
-  .menu__item {
+  .item {
     justify-content: initial;
   }
-  .menu__item-text {
+  .item-text {
     padding: 1vh 0;
     font-size: 23px;
   }
-  .menu__item-sub {
+  .item-sub {
     display: flex;
   }
 }
