--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -181,6 +181,7 @@ header {
 
 section {
   height: 100vh;
+  position: relative;
   grid-column: 1/7;
   overflow: hidden;
   picture{
@@ -220,18 +221,20 @@ a:focus {
 
 .items {
   width: 100%;
-  padding: 113px 74px;
+  //padding: 113px 74px;
+  padding: 0;
   margin: auto;
   position: relative;
   user-select: none;
   counter-reset: menucounter;
   display: grid;
-  grid-template-columns: 1fr 1fr 0.9fr 0.9fr 1fr 1fr;
+  grid-template-columns: 75px 1fr 1fr 0.9fr 0.9fr 1fr 1fr 75px;
   grid-gap: 63px;
 }
 
 .item {
   position: relative;
+  order: 2;
   &:hover::before {
     opacity: 1;
     transform: translateX(0);
@@ -240,9 +243,9 @@ a:focus {
     counter-increment: menucounter;
     content: counters(menucounter, ".", decimal-leading-zero);
     position: absolute;
+    color: white;
     left: 0;
-    border-left: 3px solid currentColor;
-    top: 20%;
+    top: 20px;
     height: 60%;
     padding-left: 1rem;
     display: flex;
@@ -254,23 +257,57 @@ a:focus {
     transition: transform 0.3s, opacity 0.3s;
   }
   &:nth-child(1) {
-    grid-column: 1/3;
+    grid-column: 2/4;
     margin-top: 160px;
   }
   &:nth-child(2) {
-    grid-column: 3/5;
+    grid-column: 4/6;
     margin-top: 427px;
   }
   &:nth-child(3) {
-    grid-column: 5/7;
+    grid-column: 6/8;
   }
   &:nth-child(4) {
-    grid-column: 1/5;
+    grid-column: 2/6;
     text-align: center;
   }
   &:nth-child(5) {
-    grid-column: 5/7;
+    grid-column: 6/8;
   }
+  
+  &.active{
+    grid-column: 1/9;
+    order: 1;
+    margin: 0;
+    picture{
+      height: 100%;
+      overflow: hidden;
+    }
+    .item-text{
+      display: none;
+    }
+    &.gr{
+      grid-column: 4/6;
+      order: 2;
+      margin: auto;
+    }
+  }
+
+  picture{
+    &::before{
+      content: attr(title);
+      position: absolute;
+      bottom: 116px;
+      color: #112200;
+      font:169px/0.81 $medium;
+      z-index: 1;
+      max-width: 924px;
+      margin: 0 auto;
+      left: 15%;
+      right: 0;
+    }
+  }
+  
   img {
     max-width: 100%;
   }
@@ -303,42 +340,6 @@ p {
 
 .item:hover .item-textinner {
   color: var(--color-menu-hover);
-}
-
-.item-sub {
-  display: none;
-  text-transform: uppercase;
-  font-weight: bold;
-  white-space: nowrap;
-  align-items: center;
-  position: relative;
-  margin-left: 2rem;
-  padding-left: 3rem;
-  opacity: 0;
-  transform: translateX(-1rem);
-  transition: transform 0.3s, opacity 0.3s;
-}
-
-.item:hover .item-sub {
-  opacity: 1;
-  transform: translateX(0);
-}
-
-.item-sub::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 15%;
-  width: 1px;
-  height: 70%;
-  background: currentColor;
-  transform-origin: 0 100%;
-  transform: rotate(22.5deg) scale3d(1, 0, 1);
-  transition: transform 0.3s;
-}
-
-.item:hover .item-sub::before {
-  transform: rotate(22.5deg) scale3d(1, 1, 1);
 }
 
 .hover-reveal {
@@ -374,15 +375,6 @@ p {
   display: none;
 }
 
-.credits {
-  align-self: flex-start;
-  padding: 5rem 0 0 0;
-}
-
-.credits a {
-  text-decoration: underline;
-}
-
 @media screen and (min-width: 53em) {
   .item {
     justify-content: initial;
@@ -408,10 +400,7 @@ p {
     fill: var(--cursor-fill);
     stroke: var(--cursor-stroke);
     stroke-width: var(--cursor-stroke-width);
-    opacity: 0.3;
-  }
-  .credits {
-    padding-left: 25vw;
+    opacity: 0.9;
   }
 }
 
@@ -469,4 +458,17 @@ html.has-scroll-dragging {
 .has-scroll-dragging .c-scrollbar_thumb {
   cursor: -webkit-grabbing;
   cursor: grabbing;
+}
+
+
+
+.line {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  height: 8px;
+  position: absolute;
+  bottom: 0;
+  display: inline-block;
+  background-color: rgba(255, 255, 255, 1);
 }
